--- a/src/Soenneker.Loops.Contacts.csproj
+++ b/src/Soenneker.Loops.Contacts.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.Loops.Contacts</AssemblyName>
         <PackageId>Soenneker.Loops.Contacts</PackageId>
         <PackageTags>loops contacts so email api loopscontactsutil util csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
